--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mpc.pytorch"]
 	path = mpc.pytorch
-	url = git@github.com:locuslab/mpc.pytorch.git
+	url = git@github.com:EmreAdabag/mpc.pytorch.git 
